--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
+    "tf-next": "^0.4.1",
     "typescript": "^4.1.3"
   }
 }
